header and some minor stuff

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,49 @@
 <nav class="navbar navbar-dark" style="background: lightgreen;">
     <div class="container-fluid">
       <a class="navbar-brand text-bold" href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Flag_of_Macedonia_-_ethnic.svg" 
-        alt="logo" width="180">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Mali_grb_leskovac_new.png/480px-Mali_grb_leskovac_new.png" 
         alt="leskov6c" width="90" height="90">
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Emblem_of_Pirot.png"
         alt="pirot" width="70" height="90">
         <img src="https://upload.wikimedia.org/wikipedia/commons/archive/9/9d/20181222003757%21Grb_Ni%C5%A1a.png"
         alt="nish" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/db/Coat_of_arms_of_Kratovo_Municipality.svg/310px-Coat_of_arms_of_Kratovo_Municipality.svg.png"
+        alt="kratovo" width="70" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Grb_Bojnika.png"
+        alt="bojnik" width="90" height="90">
         <img src="https://prokuplje.org.rs/wp-content/uploads/2017/08/Grb-Prokuplja.png"
         alt="prokupje" width="70" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/Grb_Vlasotinca.png"
+        alt="vlasotince" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Grb_Grada_Vranja.png/492px-Grb_Grada_Vranja.png"
+        alt="vranje" width="75" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Grb_Knja%C5%BEevca.png/600px-Grb_Knja%C5%BEevca.png"
+        alt="knjazhev6c" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/GRB_NA_KUMANOVO.png/401px-GRB_NA_KUMANOVO.png"
+        alt="kumanovo" width="70" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Grb_Bosilegrada.png"
+        alt="bosilegrad" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Emblem_of_Dimitrovgrad_%28Serbia%29.svg/464px-Emblem_of_Dimitrovgrad_%28Serbia%29.svg.png"
+        alt="dimitrovgrad" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/Grb_Surdulice.png"
+        alt="surdulica" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/COA_Svrljig.png"
+        alt="svr6ljig" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Crna-trava-grb.png"
+        alt="cr6na trava" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Trangerb.png"
+        alt="tr6n" width="90" height="110">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Grb_Aleksinca.png"
+        alt="aleksin6c" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/%D0%93%D0%B5%D1%80%D0%B1_%D0%BD%D0%B0_%D0%93%D0%BE%D0%B4%D0%B5%D1%87.svg/512px-%D0%93%D0%B5%D1%80%D0%B1_%D0%BD%D0%B0_%D0%93%D0%BE%D0%B4%D0%B5%D1%87.svg.png"
+        alt="godech" width="60" height="80">
       </a>
-      <span class="text-uppercase"></span>
+      <!--<span class="text-uppercase"></span>-->
       <!--<p>А а Б б В в Г г Ѓ ѓ Д д Е е Ж ж Ѕ ѕ З з И и Ј ј К к Ќ ќ Л л Љ љ 
         М м Н н Њ њ О о П п Р р С с Т т У у Ц ц Ч ч Џ џ Ш ш Ъ ъ</p>
       Ф ф - само у косовским призренско-јужноморавским говорима под утицајем албанског и турског који имају ф 
       Х х - слабо игде стога нигде 
       -->
-      <p style="font-family: tahoma;">ъ̀ а̀ ѝ ѐ о̀ ỳ й ă </p>
+      <!--<p style="font-family: tahoma;">ъ̀ а̀ ѝ ѐ о̀ ỳ й ă </p>-->
     </div>
 </nav>
