--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -19,6 +19,7 @@
         <li>Уколико желите приступ свим квизовима морате бити пријављени на Ваш налог</li>
     </ol>
     <h1 style="font-family: 'Lucida Grande'; text-align: center;">срећно учење!</h1>
+    <p style="font-family: tahoma;">DELETE AFTERWARDS: ъ̀ а̀ ѝ ѐ о̀ ỳ й ă </p>
 
     <div class="name col-md-4 my-3">
         <ng-container *ngIf="loggedIn === false">
