--- a/src/app/admin/list-of-users/list-of-users.component.html
+++ b/src/app/admin/list-of-users/list-of-users.component.html
@@ -1,6 +1,6 @@
 <br/><br/>
 <div class="container bg-light">
-    <h1>Табела регистованих налога</h1>
+    <h1>Табела регистрованих налога</h1>
     <table class="table table-striped">
         <thead>
           <tr>
