--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -75,14 +75,14 @@
                     routerLink="/quiz/vocabulary/sinonimi_meseci">5</button>
                 <span> - синоними - месеци у години</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
-            <div class="col-md-2 column">
+            <!--<div class="col-md-2 column">
                 <button [disabled]="loggedIn === false" class="btn btn-success btn-lg">6</button>
                 <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>
-            <div class="col-md-2 column">
+            </div>-->
+            <!--<div class="col-md-2 column">
                 <button [disabled]="loggedIn === false" class="btn btn-success btn-lg">7</button>
                 <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>
+            </div>-->
         </div>
         <br /><br />
         <div class="row">
@@ -124,9 +124,9 @@
                 <button class="btn btn-success btn-lg" 
                 routerLink="/quiz/text/mlogo-s6m-se-muchila">1</button><span> - Мло̀го съм се мучѝла</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
-            <div class="col-md-2 column">
+            <!--<div class="col-md-2 column">
                 <button [disabled]="loggedIn === false" class="btn btn-success btn-lg" >2</button><span> - TODO</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>
+            </div>-->
         </div>
     </div>
     <hr>
