--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -11,9 +11,27 @@
         </thead>
         <tbody>
           <tr *ngFor="let user of userList; index as i">
-            <th scope="row">{{i+1}}</th>
-            <td>{{user.username}}</td>
-            <td>{{user.points}}</td>
+            <ng-container *ngIf="i+1 === 1">
+              <th scope="row" style="background-color: gold;">{{i+1}}</th>
+              <td style="background-color: gold;">{{user.username}}</td>
+              <td style="background-color: gold;">{{user.points}}</td>
+            </ng-container>
+            <ng-container *ngIf="i+1 === 2">
+              <th scope="row" style="background-color: silver;">{{i+1}}</th>
+              <td style="background-color: silver;">{{user.username}}</td>
+              <td style="background-color: silver;">{{user.points}}</td>
+            </ng-container>
+            <ng-container *ngIf="i+1 === 3">
+              <th scope="row" style="background-color: rgb(192, 75, 8); color: white;">{{i+1}}</th>
+              <td style="background-color: rgb(192, 75, 8); color: white;">{{user.username}}</td>
+              <td style="background-color: rgb(192, 75, 8); color: white;">{{user.points}}</td>
+            </ng-container>
+
+            <ng-container *ngIf="i+1 > 3">
+              <th scope="row">{{i+1}}</th>
+              <td>{{user.username}}</td>
+              <td>{{user.points}}</td>
+            </ng-container>
           </tr>
         </tbody>
       </table>
