text and quiz ima nauka a ima i oduka

--- a/src/app/tekstovi/ima-nauka-a-ima-i-oduka-kviz/ima-nauka-a-ima-i-oduka-kviz.component.html
+++ b/src/app/tekstovi/ima-nauka-a-ima-i-oduka-kviz/ima-nauka-a-ima-i-oduka-kviz.component.html
@@ -6,7 +6,7 @@
                     alt="nema slike" width="90">
             </div>
             <div class="quiz-header">
-                <h4 style="font-family: cursive;">текст - Млого съм се мучила</h4>
+                <h4 style="font-family: cursive;">текст - Има наука, а има и одука</h4>
                 <ng-container *ngIf="name !== null">
                     <span style="font-style: italic;">Корисник: {{name}}</span>
                 </ng-container>
@@ -73,7 +73,7 @@
                     <button class="btn btn-success" (click)="resetQuiz()"><i
                         class="fa fa-refresh" aria-hidden="true"></i> решавај га па̀ овъј квиз</button>
                     <br><br>
-                    <button class="btn btn-success" (click)="saveScore()" routerLink="/quiz/text/mlogo-s6m-se-muchila">прочитај га па̀ овъј текст</button>
+                    <button class="btn btn-success" (click)="saveScore()" routerLink="/quiz/text/ima-nauka-a-ima-i-oduka">прочитај га па̀ овъј текст</button>
                 </div>
             </div>
         </ng-container>
