--- a/src/app/tekstovi/mlogo-s6m-se-muchila/mlogo-s6m-se-muchila.component.html
+++ b/src/app/tekstovi/mlogo-s6m-se-muchila/mlogo-s6m-se-muchila.component.html
@@ -11,7 +11,7 @@
                     <span style="font-style: italic;">Корисник: {{name}}</span>
                 </ng-container>
                 <ng-container *ngIf="name === null">
-                    <span style="font-style: italic;">Корисник: Нисте пријављени!</span>
+                    <span style="font-style: italic;">Корисник: Не сте пријавени!</span>
                 </ng-container>
             </div>
         </div>
