--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -124,9 +124,10 @@
                 <button class="btn btn-success btn-lg" 
                 routerLink="/quiz/text/mlogo-s6m-se-muchila">1</button><span> - Мло̀го съм се мучѝла</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
-            <!--<div class="col-md-2 column">
-                <button [disabled]="loggedIn === false" class="btn btn-success btn-lg" >2</button><span> - TODO</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>-->
+            <div class="col-md-2 column">
+                <button [disabled]="loggedIn === false" class="btn btn-success btn-lg"
+                routerLink="/quiz/text/ima-nauka-a-ima-i-oduka">2</button><span> - Ѝма на̀ука, а ѝма и о̀дука</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
         </div>
     </div>
     <hr>
