info-page stuff

--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -1,1 +1,137 @@
-<p>info-page works!</p>
+<div class="container bg-light py-5">
+    
+    <p class="col-md-8 fs-4">Садржај:</p>
+    <ul>
+        <li><a href="/info-page/#lingvisticka_zajednica">Лингвистичка заједница</a></li>
+        <li><a href="/info-page/#istorija_i_razvoj">Историја и развој</a></li>
+        <li><a href="/info-page/#klasifikacija">Класификација</a></li>
+        <li><a href="/info-page/#pismo">Писмо</a></li>
+        <li><a href="/info-page/#politika">Политика</a></li>
+        <li><a href="/info-page/#vise_o_jeziku">Више о језику</a></li>
+    </ul>
+    <hr>
+
+    <h1 class="display-6 fw-bold" id="lingvisticka_zajednica">Лингвистичка заједница</h1>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; ПТДГ (призренско-тимочка дијалекатска група) говори су јужнословенски говори који се
+        говоре на подрочју југоисточне Србије, северне С. Македоније и западне Бугарске. Заједно са македонским и 
+        бугарским језиком ови говори улазе у словенски балкански језички савез, који је уже подручје балканског 
+        језичког савеза. Говори се деле на три главна дијалекта, од којих су призренско-јужноморавски и тимочко-лужнички 
+        прави дијалекти, а сврљишко-заплањски је међудијалекат настао на додирним тачкама друга два дијалекта. 
+        ПТДГ говорници себе сматрају углавном Србима, Бугарима или Македонцима, али има и других.
+    </p>
+    <div>
+        <img class="pic-border" src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Torlak_dialects_map_en.png" width="350" height="450"/>
+    </div>
+    <p class="col-md-6 fs-6">
+        Мапа простирања ПТДГ говора на којој је приказано и већинско национално опредељење код говорника: 1. српско национално 
+        опредељење; 2. бугарско национално опредељење; 3. македонско национално опредељење; 4. Горанци; 5. Крашовани (хрватско 
+        национално опредељење); 6. Срби Косова пре 1999.
+    </p>
+    <div>
+        <img class="pic-border" src="https://upload.wikimedia.org/wikipedia/commons/d/d2/%D0%9F%D1%80%D0%B8%D0%B7%D1%80%D0%B5%D0%BD%D1%81%D0%BA%D0%BE-%D1%82%D0%B8%D0%BC%D0%BE%D0%BA%D1%81%D0%BA%D0%B8%D0%B9-%D0%B4%D0%B8%D0%B0%D0%BB%D0%B5%D0%BA%D1%82.png"
+        width="350" height="450"/>
+    </div>
+    <p class="col-md-6 fs-6">
+        Мапа простирања ПТДГ говора на којој су приказане и границе дијалеката (призренско-јужноморавски, сврљишко-заплањски, 
+        тимочко-лужнички), где су нешто тамнијом бојом обојени ПТДГ дијалекти у Буграској и С. Македонији.
+    </p>
+    
+    <h2 class="display-8 fw-bold">Називи</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Није постојао само један назив за ову лингвистичку групу 
+        међу њеним говорницима, већ су га називали према местима одакле потичу 
+        (лесковачки, врањски, пиротски и сл.), према оближњим рекама (моравски, нишавски, јабланички и сл.), 
+        а касније по личним убеђењима и националним самоопредељењем (српски, бугарски, македонски).
+        <br/>
+        &nbsp; &nbsp; &nbsp; Један од најраспрострањенијих општих назива је <em>нашки</em> (наш језик), као и 
+        <em>нашински</em> (језик нашинаца, наших људи). Називи шопски и торлачки су прихваћени на ужем 
+        географском простору.
+        <br/>
+        &nbsp; &nbsp; &nbsp; У српској лингвистици се користе термини призренско-тимочки дијалекат и 
+        призренско-тимочка дијалекатска група, у бугарској лингвистици се ови говори називају прелазним 
+        у-говорима или само прелазним говорима (буг. <em>преходни у-говори, преходни говори</em>).
+        <br/>
+        &nbsp; &nbsp; &nbsp; Страни лингвисти најчешће користе термин <em>торлачки</em> када говоре о 
+        овим говорима. 
+    </p>
+    <hr>
+    
+    <h1 class="display-6 fw-bold" id="istorija_i_razvoj">Историја и развој</h1>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; ПТДГ дијалекти имају добар део заједничке историје са другим јужнословенским 
+        језицима, тако да ћемо причу о овим говорима започети у сердњем веку. Наиме, до XII или XIII века 
+        ПТДГ говори имају заједнички језички развој са штокавским говорима што се огледа у заједничким 
+        фонетичким особинама, односно њихов заједнички и једнак развој из старословенског језика. 
+        Међутим, након овог периода, даље промене које захватају штокавске говоре не захватају ПТДГ говоре, 
+        већ они крећу у даљи развој одвојеним путем. У том одвојеном путу развоја ПТДГ говори развијају 
+        особине које их спајају најпре са македонским и бугарским говорима, а примајући и балканистичке црте 
+        и са албанским, грчким и румунским језиком.
+        <br/>
+        &nbsp; &nbsp; &nbsp; Пре турских освајања ових простора у XIV веку, територија на којој су данас 
+        распрострањени ПТДГ говори је непрестано шетала између власништва Србије, Бугарске и Источног Римског 
+        Царства. У периоду турске владавине читаво балканско полуострво са свим својим народима и језицима постаје 
+        део једне велике државе. Међу трговцима се јавља потреба за брзо и лако превођење са једног језика на други. 
+        На овај начин, вишевековним контактом, почињу се јављати одређене граматичке црте које ће постати заједничке 
+        за већину језика на полуострву. Балкански језички савез или балканска језичка заједница (нем. <em>Balkan Sprachbund</em>) 
+        је назив који је дат овим граматичким цртама које су се развиле у [на први поглед] несродним језицима балканског 
+        полуострва у време турске владавине. У овом периоду ПТДГ говори усвајају и гомилу новог вокабулара, првенствено из 
+        турског језика, али и из албанског, грчког, ромског, влашког, цинцарског и др.
+        <br/>
+        &nbsp; &nbsp; &nbsp; За први писани документ на неком од ПТДГ говора узима се Темски рукопис српског православног 
+        епископа Кирила Живковића из Пирота. Темски рукопис је написан 1764. године, а основни језици на којима је написан 
+        су ПТДГ (говор околине Пирота) и црквенословенски језик са утицајима руског језика. Кирил Живковић је свој локални говор звао 
+        <em>простим бугарским језиком</em>; "Из душевного обреда в’ неделных днех слова избрана. На прости язык болгарскій." 
+        - <em>"Изабране речи из недељних духовних обреда. На простом бугарском језику."</em>; овај рукопис се данас налази у 
+        библиотеци Матице Српске у Новом Саду. 
+        <br/>
+        &nbsp; &nbsp; &nbsp; Каснија литература од значаја за ПТДГ говоре укључује дела Борисава Станковића и Стевана Сремца. 
+        Од научних радова значајан је рад Александра Белића који је 1905. основао часопис <em>Српски дијалектолошки зборник</em>, и 
+        у првом издању часописа објавио рад <em>Дијалекти источне и јужне Србије</em> у којем је описао ПТДГ говоре и поставио 
+        добар темељ за будуће лингвисте, филологе и дијалектологе који су од тада до данас ове говоре детаљно описали у својим 
+        радовима у разним издањима Српског дијалектолошког зборника. За више информација о особинама ПТДГ говора видети  
+        <a href="/info-page/#vise_o_jeziku">овај</a> одељак.
+    </p>
+    <hr>
+    
+    <h1 class="display-6 fw-bold" id="klasifikacija">Класификација</h1>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Класификација ових говора је шаренолика. Југословенски филолози су били подељени на 
+        оне који би ове говоре сврстали у засебно наречје, као четврто наречје српскохрватског језика (поред 
+        штокавског, кајкавског и чакавског), однсоно као друго наречје српског језика (поред штокавског), и оних који би 
+        ове говоре сврстали у штокавске. Штокавска струја је провладала, међутим јавила се нова подела. Једни би 
+        сврстали ПТДГ говоре у такозване староштокавске дијалекте, а други у некакве средњоштокавске дијалекте.
+        <br/>
+        &nbsp; &nbsp; &nbsp; Павле Ивић користи термин призренско-тимочка дијалекатска зона и сврстава ове говоре у 
+        групу староштокавских дијалеката. Асим Пецо их такође класификује у ту групу. Милош Окука их издваја у посебну 
+        средњоштокавску групу дијалеката и користи термин призренско-тимочка дијалекатска област. Милан Решетар сматра 
+        ове говоре засебним наречјем одвојеним од штокавског.
+        <br/>
+        &nbsp; &nbsp; &nbsp; Бугарски лингвисти сматрају ове говоре наречјем одвојеним од штокавског и називају ове говоре 
+        следећим терминима: прелазни у-говори, прелазни говори, моравски говори, торлачки говори. Неки бугарски лингвисти: 
+        Крсте Мисирков, Стојко Стојков, Бањо Цонев и др. ПТДГ говоре у бугарској називају белоградичко-трнским говорима или 
+        торлачким говорима или прелазним говорима. Македонски лингвисти ПТДГ говоре који се налазе на територији 
+        републике С. Македоније називају североисточним наречјем. 
+        <br/>
+        &nbsp; &nbsp; &nbsp; Није неопходно наводити да српски лингвисти сматрају ове говоре делом српског језика, бугарски делом 
+        бугарског језика, а македонски лингвисти делом македонског језика.
+    </p>
+    <hr>
+    
+    <h1 class="display-6 fw-bold" id="pismo">Писмо</h1>
+    <hr>
+    
+    <h1 class="display-6 fw-bold" id="politika">Политика</h1>
+    <p class="col-md-11 fs-5">
+        о БЦМС као пример један језик али више њих политички 
+        док са друге стране Јадранског мора имамо контрапример 
+        италијански више језика али један политички 
+    </p>
+    <hr>
+    
+    <h1 class="display-6 fw-bold" id="vise_o_jeziku">Више о језику</h1>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Више о особинама ових говора видите <em><a href="#">овде</a></em>.
+    </p>
+    <hr>
+</div>
