--- a/src/app/tekstovi/ima-nauka-a-ima-i-oduka/ima-nauka-a-ima-i-oduka.component.html
+++ b/src/app/tekstovi/ima-nauka-a-ima-i-oduka/ima-nauka-a-ima-i-oduka.component.html
@@ -39,7 +39,8 @@
                     какво̀ пра̀ви. Она̀ ѓи срѐтла и рекла̀ им да мо̀рају да рабо̀те а̀ко са̀кају да једỳ, 
                     па дала̀ на баштỳ си сеќѝру да сечѐ дръ̀ва, а на мајќỳ си вретѐно и кудѐљу да предѐ. 
                     И тека̀ дочека̀ли зѐтътога ка се врънỳл од ра̀боту.
-                </p>
+                </p><br/>
+                <p style="font-size: small; text-align: right;">извор: Народне приповетке из рукописних збирки, 1996, Пиротски зборник, 22</p>
             </div>
         </div>
         <br/>
