--- a/src/app/tekstovi/mlogo-s6m-se-muchila/mlogo-s6m-se-muchila.component.html
+++ b/src/app/tekstovi/mlogo-s6m-se-muchila/mlogo-s6m-se-muchila.component.html
@@ -32,7 +32,8 @@
                     да не остѝне, да се испечѐ. "Не, што рабо̀тиш тој!?" Мој та̀тко ми не да̀де. Па ми вѝка: "Со̀лни ма̀ло брашъ̀нце!" 
                     Оно̀ съ̀мо горѝ. Пỳштам по ма̀ло бра̀шно у цръпỳљу. "Съг мо̀жеш, дѐте да сѝпеш леб да се печѐ!" Угорѝм връшњѝк и запрѐќам 
                     леб. И тъг съм наста̀ла домаќѝца. Тъј дън и дънъ̀с.
-                </p>
+                </p><br/>
+                <p style="font-size: small; text-align: right;">извор: Радмила Жугић, Речник говора јабланичког краја, 2005, Српски дијалектолошки зборник, 52</p>
             </div>
         </div>
         <br/>
