quiz text ovoj si tekje poche da se osnura

--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -18,7 +18,9 @@
         бугарским језиком ови говори улазе у словенски балкански језички савез, који је уже подручје балканског 
         језичког савеза. Говори се деле на три главна дијалекта, од којих су призренско-јужноморавски и тимочко-лужнички 
         прави дијалекти, а сврљишко-заплањски је међудијалекат настао на додирним тачкама друга два дијалекта. 
-        ПТДГ говорници себе сматрају углавном Србима, Бугарима или Македонцима, али има и других.
+        ПТДГ говорници себе сматрају углавном Србима, Бугарима или Македонцима, али има и других. На УНЕСКО-вој листи 
+        угрожених језика 2010. године нашли су се и ПТДГ говори као <em>рањиви</em> под термином <em>Torlak</em> 
+        што је изазвало критике од стране српских лингвиста.
     </p>
     <div>
         <img class="pic-border" src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Torlak_dialects_map_en.png" width="350" height="450"/>
@@ -99,7 +101,7 @@
         &nbsp; &nbsp; &nbsp; Класификација ових говора је шаренолика. Југословенски филолози су били подељени на 
         оне који би ове говоре сврстали у засебно наречје, као четврто наречје српскохрватског језика (поред 
         штокавског, кајкавског и чакавског), однсоно као друго наречје српског језика (поред штокавског), и оних који би 
-        ове говоре сврстали у штокавске. Штокавска струја је провладала, међутим јавила се нова подела. Једни би 
+        ове говоре сврстали у штокавске. Штокавска струја је прeовладала, међутим јавила се нова подела. Једни би 
         сврстали ПТДГ говоре у такозване староштокавске дијалекте, а други у некакве средњоштокавске дијалекте.
         <br/>
         &nbsp; &nbsp; &nbsp; Павле Ивић користи термин призренско-тимочка дијалекатска зона и сврстава ове говоре у 
@@ -119,13 +121,61 @@
     <hr>
     
     <h1 class="display-6 fw-bold" id="pismo">Писмо</h1>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; &nbsp; ПТДГ говори никада нису били стандардизовани, те стога ни 
+        стандардно писмо којим би се користили не постоји. Они који живе у Србији се користе српском 
+        ћирилицом - вуковицом, као и српскохрватском латиницом - гајевицом. Са друге стране, они који 
+        живе у Бугарској се користе бугарском ћирилицом, а они у С. Македонији македонском ћирилицом. 
+        Кроз историју су углавном само трговци и хришћански свештеници били писмени, а они су се користили 
+        црквенословенском ћирилицом. Постоје подаци из XIX века и о записивању ових говора на грчком писму 
+        од стране говорника који су похађали такозване грчке школе. <br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; У овом пројекту користи се модификована верзија српске ћирилице, мада 
+        се исто тако може рећи да представља и модификовану верзију македонске ћирилице. У односу на српску 
+        ћирилицу разликује се на следећи начин:<br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; - додата су слова ѕ (звучно ц) и ъ (полугласник)<br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; - избачено је слово х <br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; - ћ и ђ су замењени са ќ и ѓ<br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; Слово ѕ се јавља у старословенској ћирилици и представља звучни парњак 
+        безвучноме ц. Полугласник ъ је глас настао најпре спајањем изговора старословенских ь и ъ у корист 
+        ъ. Иста ова фонетска црта се догодила у српском и хрватском језику, с тим што се ъ у српском и 
+        хрватском изједначило са вокалом а, а у ПТДГ је дало тзв. шва звук. Глас х је исчезао у овим говорима, 
+        он или испада из изговора, или се супституише са к, а тамо где испада из изговора често се на његовом 
+        месту јављају ј или в. Гласови ќ и ѓ варирају у изговору од чисто македонских ќ и ѓ, преко палатала 
+        средњег реда к' и г' (палатализованих к и г) и палатала предњег реда т' и д' (палатализованих т и д), 
+        до чисто српских ћ и ђ.
+    </p>
     <hr>
     
     <h1 class="display-6 fw-bold" id="politika">Политика</h1>
     <p class="col-md-11 fs-5">
-        о БЦМС као пример један језик али више њих политички 
-        док са друге стране Јадранског мора имамо контрапример 
-        италијански више језика али један политички 
+        &nbsp; &nbsp; &nbsp; &nbsp; Термин <em>језик</em> у лингвистици представља било какав 
+        облик комуникације. Међутим, језик уз мало политике и идеологије постаје беспотребно 
+        компликован термин. Узмимо за пример српски, хрватски (штокавски варијант), босански и 
+        црногорски језик. Политички, ово су четири различита језика, док лингвистички, ово је 
+        један језик са четири литературна стандарда. Са друге стране Јадрана наилазимо на контра 
+        ситуацију где се сродни романски језици апенинског полуострва политички називају једним 
+        језиком - италијанским. <br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; Политичка ситуација сврстава ПТДГ говоре првенствено у 
+        једну од три групе: македонски језик, бугарски језик, српски језик; а у зависности од 
+        националног осећања говорника. Занимљиво је да су се на попису становништва Србије 2011. 
+        године нашли уноси "Шоп" и "Торлак" у одељку "национална припадност", где се за шопску 
+        националну припадност изјаснило 142 лица, а за торлачку 12 лица. Ово је изазвало пометњу 
+        код одређеног слоја српских и бугарских националиста, где српски националисти виде ово 
+        као атак на српски национални идентитет и даље цепање српске нације, док бугарски националисти 
+        ту виде неку врсту дебугаризације становништва југоисточне Србије. <br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; Стандардизовање ПТДГ говора и давање тим говорима статус језика би 
+        изазвало пометњу на срспкој сцени где би се то доживело као још један напад на српски језик и 
+        његово поновно цепање након признавања босанског и црногорског језика у скоријој историји. Давање 
+        овим говорима статус наречја би пак дало за право хрватским лингвистима да јасно укажу на 
+        различитости српског и хрватског језика где би онда кајкавски и чакавски говори били чисто хрватски, 
+        ПТДГ говори чисто срспки, а штокавски говори би им били заједнички. <br/>
+        &nbsp; &nbsp; &nbsp; &nbsp; Било како било, свађе око тога да ли је нешто пуноправни језик или 
+        дијалекат неког "престижнијег" језика су увек биле политичке и идеолошке природе. Говорници ПТДГ говора 
+        су увек свој језик потчињавали тим "племенитијим", "бољим" и "исправнијим" говорима на основу симпатија 
+        које су гајили према тим "слободним" говорима, или на основу тога у какву је националну свест био 
+        индоктринисан њихов предак у 19. веку. Појам нације као етничко-лингвистичке скупине постаје све бесмисленији 
+        у модерно време, а национализам све више остаје болест 19. и почетка 20. века од које народ овог брдовитог 
+        полуострва југоисточне Европе болује, нажалост, и данас. 
     </p>
     <hr>
     
