--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -128,6 +128,10 @@
                 <button [disabled]="loggedIn === false" class="btn btn-success btn-lg"
                 routerLink="/quiz/text/ima-nauka-a-ima-i-oduka">2</button><span> - Ѝма на̀ука, а ѝма и о̀дука</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
+            <div class="col-md-2 column">
+                <button [disabled]="loggedIn === false" class="btn btn-success btn-lg"
+                routerLink="/quiz/text/ovoj-si-tekje-poche-da-se-osnura">3</button><span> - Ово̀ј си тѐќе почѐ да се оснỳра</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
         </div>
     </div>
     <hr>
